--- a/.github/workflows/system.yml
+++ b/.github/workflows/system.yml
@@ -123,7 +123,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: 'stable'
+          go-version: "stable"
         id: go
 
       - name: Get Dependencies
@@ -148,6 +148,7 @@ jobs:
 
       - name: Install xmllint (for rest)
         run: |
+          sudo apt-get update
           sudo apt-get install libxml2-utils
 
       # see https://github.com/versity/versitygw/issues/1034
