--- a/.github/workflows/system.yml
+++ b/.github/workflows/system.yml
@@ -29,7 +29,7 @@ jobs:
             BACKEND: "posix"
           - set: "REST, posix, non-static, chunked|checksum|versioning|bucket, folder IAM"
             IAM_TYPE: folder
-            RUN_SET: "rest-chunked,rest-checksum,rest-versioning,rest-bucket"
+            RUN_SET: "rest-chunked,rest-checksum,rest-versioning,rest-bucket,rest-list-buckets,rest-create-bucket,rest-head-bucket"
             RECREATE_BUCKETS: "true"
             DELETE_BUCKETS_AFTER_TEST: "true"
             BACKEND: "posix"
