--- a/.github/workflows/system.yml
+++ b/.github/workflows/system.yml
@@ -33,6 +33,12 @@ jobs:
             RECREATE_BUCKETS: "true"
             DELETE_BUCKETS_AFTER_TEST: "true"
             BACKEND: "posix"
+          - set: "REST, posix, non-static, not implemented, folder IAM"
+            IAM_TYPE: folder
+            RUN_SET: "rest-not-implemented"
+            RECREATE_BUCKETS: "true"
+            DELETE_BUCKETS_AFTER_TEST: "true"
+            BACKEND: "posix"
           - set: "s3, posix, non-file count, non-static, folder IAM"
             IAM_TYPE: folder
             RUN_SET: "s3-non-file-count"
