--- a/.github/workflows/system.yml
+++ b/.github/workflows/system.yml
@@ -21,9 +21,9 @@ jobs:
             RECREATE_BUCKETS: "true"
             DELETE_BUCKETS_AFTER_TEST: "true"
             BACKEND: "posix"
-          - set: "REST, posix, non-static, base|acl|multipart, folder IAM"
+          - set: "REST, posix, non-static, base|acl|multipart|put-object, folder IAM"
             IAM_TYPE: folder
-            RUN_SET: "rest-base,rest-acl,rest-multipart"
+            RUN_SET: "rest-base,rest-acl,rest-multipart,rest-put-object"
             RECREATE_BUCKETS: "true"
             DELETE_BUCKETS_AFTER_TEST: "true"
             BACKEND: "posix"
