test: more list-buckets, bucket tagging tests, dockerfile enhancements

--- a/tests/.env.docker.default
+++ b/tests/.env.docker.default
@@ -13,8 +13,8 @@ SECRETS_FILE=./tests/.secrets
 MC_ALIAS=versity
 LOG_LEVEL=2
 USERS_FOLDER=$PWD/iam
-#TEST_LOG_FILE=test.log
-#VERSITY_LOG_FILE=versity.log
+#TEST_LOG_FILE=log/test.log
+#VERSITY_LOG_FILE=log/versity.log
 IAM_TYPE=folder
 DIRECT=false
 #DIRECT_DISPLAY_NAME=
