--- a/tests/Dockerfile_test_bats
+++ b/tests/Dockerfile_test_bats
@@ -89,5 +89,7 @@ ENV WORKSPACE=.
 ENV VERSITYGW_TEST_ENV=$CONFIG_FILE
 #ENV AWS_REQUEST_CHECKSUM_CALCULATION=WHEN_REQUIRED
 
+RUN mkdir log
+
 ENTRYPOINT ["tests/run.sh"]
 CMD ["s3api,s3,s3cmd,mc,rest"]
