--- a/.github/workflows/system.yml
+++ b/.github/workflows/system.yml
@@ -57,6 +57,18 @@ jobs:
             RECREATE_BUCKETS: "false"
             DELETE_BUCKETS_AFTER_TEST: "false"
             BACKEND: "posix"
+          - set: "REST, posix, static, rest-put-bucket-tagging, folder IAM"
+            IAM_TYPE: folder
+            RUN_SET: "rest-put-bucket-tagging"
+            RECREATE_BUCKETS: "false"
+            DELETE_BUCKETS_AFTER_TEST: "false"
+            BACKEND: "posix"
+          - set: "REST, posix, non-static, rest-put-bucket-tagging, folder IAM"
+            IAM_TYPE: folder
+            RUN_SET: "rest-put-bucket-tagging"
+            RECREATE_BUCKETS: "true"
+            DELETE_BUCKETS_AFTER_TEST: "true"
+            BACKEND: "posix"
           - set: "s3, posix, non-file count, non-static, folder IAM"
             IAM_TYPE: folder
             RUN_SET: "s3-non-file-count"
