feat: add multi-backend S3 gateway support with automatic fallback
Implements transparent multi-backend architecture for VersityGW that enables:
- Automatic fallback across multiple S3-compatible backends (Cloudflare R2, MinIO, AWS S3, etc)
- Read operations (GET/HEAD/LIST) try all backends sequentially until object is found
- Write operations (PUT/DELETE) always target primary backend only
- Robust 404 detection to distinguish missing objects from other errors
- Presigned URL generation with configurable expiration (already supported by Versity)

Core implementation:
- backend/multibackend.go: MultiBackend wrapper with fallback logic (606 lines)
- cmd/versitygw/s3multi.go: New CLI command for multi-backend mode (241 lines)
- cmd/versitygw/main.go: Register s3MultiCommand

Configuration via JSON with environment variable overrides (VGW_S3_MULTI_BACKEND_N_FIELD).
Tested successfully with Cloudflare R2 dual-bucket setup.

Includes patch file for easy application to upstream Versity codebase.

--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,7 @@ VERSION
 *.tar.gz
 **/rand.data
 /profile.txt
+/bin/
 
 dist/
 
@@ -60,6 +61,7 @@ tests/!s3cfg.local.default
 
 # patches
 *.patch
+!multibackend-implementation.patch
 
 # grafana's local database (kept on filesystem for survival between instantiations)
 metrics-exploration/grafana_data/**
