feat: add multi-backend S3 gateway with automatic fallback
- Multi-backend wrapper supporting primary/fallback S3 providers
- Automatic credential generation for security
- Presigned URL support with configurable expiration
- Docker Compose deployment with health checks
- Comprehensive bilingual documentation (EN/PT-BR)
- Performance improvements and robustness fixes
- Tested with Cloudflare R2 and standard S3 providers

NOTE: This is a clean history commit without any sensitive data

--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,7 @@ VERSION
 *.tar.gz
 **/rand.data
 /profile.txt
+/bin/
 
 dist/
 
@@ -60,6 +61,7 @@ tests/!s3cfg.local.default
 
 # patches
 *.patch
+!multibackend-implementation.patch
 
 # grafana's local database (kept on filesystem for survival between instantiations)
 metrics-exploration/grafana_data/**
@@ -67,3 +69,12 @@ metrics-exploration/grafana_data/**
 # bats tools
 /tests/bats-assert
 /tests/bats-support
+# Test files with credentials
+test-r2-*.json
+test-r2-*.sh
+test-r2-*.md
+*-TEST-*.md
+QUICKSTART.sh
+run-r2-*.sh
+URL*.md
+TEST*.md
