fix: address security and best practices from code review
- Security improvements:
  * Remove secrets from command line args and logs (entrypoint.sh)
  * Use environment variables for credentials instead of CLI args
  * Redact --access and --secret in log output
  * Hide secret key input with -sp flag (quickstart.sh)
  * Add warnings about credential logging

- Error handling improvements:
  * Add ParseBool error logging for invalid boolean values
  * Replace panic with graceful error return in credential generation
  * Provide helpful error messages for manual credential entry

- Best practices:
  * Pin alpine:3.19 instead of alpine:latest in Dockerfile
  * Add proper quoting for environment variables to prevent injection
  * Improve credential generation failure handling

Addresses feedback from automated code review (Copilot AI)

--- a/docker/Dockerfile.multibackend
+++ b/docker/Dockerfile.multibackend
@@ -23,8 +23,8 @@ RUN CGO_ENABLED=0 GOOS=linux go build \
     -ldflags "-X=main.Build=${BUILD} -X=main.BuildTime=${TIME} -X=main.Version=${VERSION} -w -s" \
     -o versitygw
 
-# Final stage
-FROM alpine:latest
+# Final stage - pin to specific alpine version for reproducible builds
+FROM alpine:3.19
 
 # Install ca-certificates for HTTPS
 RUN apk --no-cache add ca-certificates tzdata
